fixed grid-template-columns to properly align components

--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,23 @@
 .App {
-  display: grid;
-  grid-template-rows: 1fr, 1fr;
+  
 }
 
 .top {
-  min-height: 100vh;
-  grid-row: 1;
+  width: 100%;
   display: grid;
-  grid-template-columns: 1fr, 3fr;
-}
-
-.bottom {
-  min-height: 100vh;
-  grid-row: 2;
-  display: grid;
-  grid-template-columns: 1fr, 2fr;
+  grid-template-columns: 35% 65%;
 }
 
 .navbar {
   grid-column: 1;
-  min-width: 25vh;
+  height: 10vh;
   background: #CBC5C1;
-  min-height: 10vh;
   display: flex;
   top: 0;
   justify-content: space-evenly;
   align-items: center;
 }
 .personal-info {
-  min-width: 25vh;
   grid-column: 1;
   background: #CBC5C1;
   border-right: 2px solid #3E3E3B;
@@ -36,21 +25,8 @@
 }
 
 .project {
-  min-width: 75vh;
   grid-column: 2;
   background: #A2AAB0;
   border-bottom: 2px solid #3E3E3B;
 }
 
-.about {
-  min-width: 40vh;
-  grid-column: 1;
-  background: #EBECED;
-  border-right: 2px solid #3E3E3B;
-}
-
-.skills {
-  min-width: 60vh;
-  grid-column: 2;
-  background: #4C586F;
-}
