--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -3,15 +3,16 @@
 .Content {
   margin: 10vh;
   margin-top: 0;
-  min-height: 80vh;
+  height: 80vh;
   background: #fff;
   border: 1px solid #3E3E3B;
   font-family: 'Chivo', sans-serif;
+  padding: 10px;
 }
 
 .Project {
   margin: 10vh;
-  min-height: 80vh;
+  height: 80vh;
   background: #fff;
   border: 1px solid #3E3E3B;
   font-family: 'Chivo', sans-serif;
